# research_ws

./: (unused)csv_file.py  (unused)hihuku_problem_sample.py  (unused)mouse_click_coodinate.py  (unused)particle_distribution_color_plot_2D_quiver.py  (unused)patarn_matching.py  (unused)plot_surface.py  .gitignore  1700515070673309.pcd  1700515075716292.pcd  README_.md  amcl_sabun_kairyou.eps  amcl_sabun_kairyou_x.eps  amcl_sabun_kairyou_y.eps  analize_localizability.sh  analize_localizability_route1_reverse.sh  analize_localizability_route2.sh  calculate_Localizability.py  coverage_problem_for_white_lane.py  create_csv_for_tyoukanzu_check.py  create_white_map_opencv.py  frames.gv  hihuku_problem_sample.py  log.txt  map_sb10_new.pgm  map_sb10_new.yaml  not_median_idoukiseki.eps  particle_distribution_color_plot.py  particle_distribution_color_plot_2D.py  particle_distribution_color_plot_3D.py  pf_csv_distribution_hyouka_calc.py  plot_foot_stanp.py  plot_meshgrid_2d.py  plot_odom.py  plot_odom_from_csv.py  plot_odom_sb.py  plot_white_global.py  ros_to_cv_coodinate.py  white_lane.sh  white_lane_route1_reverse.sh  white_lane_route2.sh  (+2 more)
src/line_detection/: CMakeLists.txt  ReadMe.md  package.xml
src/line_detection/config/: polygon_params.yaml
src/line_detection/launch/: cam_lec.launch  cut_rosbag_image.launch  donkey_front_realsense_eco.launch  line_detection_hsv.launch  polygon_publisher.launch  rosbag_img_extract_20220615a.launch  rosbag_save.launch  yuudo_calc.launch
src/line_detection/rviz/: line_detection.rviz  yuudo_calc.rviz
src/line_detection/scripts/: [unused]sample_open3d.py  check_cv_coodinate_for_bird_eye_view.py  check_hsv_range.py  conv_hdl_pose2map.py  hogh_mix.py  line_detection_hsv.py  line_detection_opencv4_homography.py  line_detection_opencv5_homography_timer.py  line_detection_opencv5_homography_timer_aisin.py  line_detection_opencv5_homography_timer_aisin_for_rsj.py  matching_return.py  paste_pc2_on_3d_map_modify.py  paste_white_line_pc2_on_3d_map.py  paste_white_line_pc2_on_map.py  pc2.py  pc2_process.py  plot_transformed_point.py  sample_realsense.py  tenzi_block.py  tracker.py  transform.py  tyoukanzu.py  tyoukanzu_hsv_range.py
src/line_detection/src/: polygon_publisher.cpp  rgbdxyz_check.cpp  rviz_while_lane_pub.cpp  rviz_white_lane_expand.cpp  rviz_white_lane_sb.cpp  sample_rviz.cpp
src/map_optimization/: CMakeLists.txt  package.xml
src/map_optimization/scripts/: (unused)debug.py  (unused)debug_plot.py  caluculate_std_label.py  cliped_1.5.py  cluster_localizability_coodinate.py  create_candidate_f.py  create_candidate_f_from_polygon.py  create_fdmat_from_white_lane.py  create_white_map_opencv.py  create_white_polygon_from_random_f.py  debug_set_ploblem.py  for_distribution_polygon.py  gen_F2polygnon.py  gen_array.py  gen_fd_binary_mat.py  gen_mat.py  plot_cluster_d_by_f_mono_color.py  plot_f_d.py  recmmend_hige_polygon.py  recommend_cliped.py  result_f_d_plot.py  result_f_d_plot_for_document.py  ros_to_cv_coodinate.py  sample_rotate_ani.py  set_covering_problem.py  visualize_candidate_f.py
src/map_optimization/src/: candinate_F.cpp  create_Ad.cpp  update_coodinate_d.cpp
src/my_pcl_node/: CMakeLists.txt  package.xml
src/my_pcl_node/scripts/: create_mat.py  node_scatter.py  plot_2d.py  potential_view.py
src/my_pcl_node/src/: pcl_node.cpp
src/particlefilter_simulation_basic/: CMakeLists.txt  README.md  package.xml  particle.rviz
src/particlefilter_simulation_basic/scripts/: publish_2d_grid_data.py  sampleArray.py
src/particlefilter_simulation_basic/src/: Inpedance_control_check.cpp  a.out  global_white_line_publisher.cpp  likelihood_distribution.cpp  particle_filter_propose.cpp  particle_filter_propose_aisin.cpp  particle_filter_propose_aisin_for_rsj.cpp  particle_filter_propose_for_icmre.cpp  particlefilter_simulation_basic.cpp  resample_test.cpp  sub_amcl_pose_to_csv.cpp  sub_amcl_tf_broadcaster.cpp  sub_odom_to_csv.cpp  visualize_likeliyfood.cpp  white_lane_publisher_for_real.cpp
src/sim/: CMakeLists.txt  README.md  gazebo_pf.md  package.xml  setup.py  usage
src/sim/config/: controller.yaml
src/sim/launch/: beego.launch  control.launch  execute_pf_for_gazebo.launch  likelyfood.launch  pf.md  rosbag_save_for_gazebo.launch  white_lane.launch
src/sim/models/add_hige_x200length100/: model.config  model.sdf
src/sim/models/add_hige_x200length50/: model.config  model.sdf
src/sim/models/add_hige_x200length_kyokutan/: model.config  model.sdf
src/sim/models/after_set_covering_route1/: model.config  model.sdf
src/sim/models/after_set_covering_route1_tougou/: model.config  model.sdf
src/sim/models/cource/: model.config  model.sdf
src/sim/models/long_white_lane_map/: model.config  model.sdf
src/sim/models/oregatukutta_1.5_hige/: model.config  model.sdf
src/sim/models/sb_map/: model.config  model.sdf
src/sim/rviz/: beego.rviz  gazebo_pf.rviz  likelyfood.rviz  realsense_beego.rviz  sb_map_check.rviz  three_stacked_white_lane.rviz
src/sim/scripts/: (unused)visualization_color_particle.py  README.md  beego.py  get_robot_sate_from_gazebo.py  line_detection_for_gazebo.py  line_detection_opencv5_homography_timer_for_gazebo.py  pc_to_pc2_converter.py  plot_clor_bar.py  visualize_likely_food.py
src/sim/src/: (unused)hinanyou_gridmap_localization_for_gazebo.cpp  beego_odom_publisher.cpp  get_yaw.cpp  gridmap_localization_for_gazebo.cpp  likelyfood_distribution_for_gazebo.cpp  particle_filter_propose_for_gazebo.cpp  pf_for_gazebo.md  points_distance.cpp  points_sub_distance.cpp  rviz_white_lane_sb_for_gazebo.cpp  sample_marker_publisher.cpp
src/sim/urdf/: _d435.gazebo.xacro  _d435.urdf.xacro  _d435_chinpo.urdf.xacro  beego.urdf  beego.urdf.xacro  beego_ban.urdf  beego_old.urdf  robot_ugokuzo.md
src/sim/worlds/: add_hige_x200length100.world  add_hige_x200length50.world  add_hige_x200length_kyokutan.world  after_set_covering_route1.world  after_set_covering_route1_tougou.world  box.world  long_white_lane_map.world  oregatukutta_1.5_hige.world  sb_map.world  sb_map_new.world  test.world  three_stacked_white_lane_map.world
(+79 files in other folders)
